fixed wrap background between page 2 & 3

--- a/style.css
+++ b/style.css
@@ -220,8 +220,8 @@ h2, p{
 body{
   margin: 0; 
   padding: 0;
-  background-image: url(bgpage2.png);
-  background-size: cover;
+  /* background-image: url(bgpage2.png);
+  background-size: cover; */
 }
 .imagebox {
   width: 400px;
@@ -413,22 +413,54 @@ body{
 }
 
 /* FIXED BACKGROUND IMAGE */
-figure{
+.containerfixedbg{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background: #99e5e9;
+  font-size: 24px;
+  padding: 25px;
+}
+.fixedbg{
+  background-image: url(bgpage2.png);
+  background-size: cover;
+  background-attachment: fixed;
+  height: 500px;
+}
+
+/* *{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+} */
+/* .section-1 {
+  width: 100%;
+  height: 600px;
+}
+
+.section-1 .box{
+  height: 100vh;
+  background-attachment: fixed;
+  background-size: cover;
+} */
+
+
+/* figure{
   position: relative;
   width: 100%;
   height: 60%;
   margin: 0:important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
+} */
+/* .fixed-wrap { */
+  /* clip: rect(0, auto, auto, 0);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-#fixed {
-  background-image: url('img_ship.jpg');
+} */
+/* #fixed {
+  background-image: url(bgpage2.png);
   position: fixed;
   display: block;
   top: 0;
@@ -440,7 +472,7 @@ figure{
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   will-change: transform;
-}
+} */
 
 /* BOOTSTRAP PADDING FIX */
 [class="col-"] {
